# lightcomposer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.helix/: languages.toml
fab/: base1.scad  base1.stl  base2.stl  face1.scad  face1.stl  face2.stl  peg.scad  peg.stl  socket_housing.stl
include/: audio.h  blocking_queue.h  draw.h  listener.h  mstime.h  music.h  netlights.h  packet_queue.h  pixel.h  sample_queue.h  sampleset.h
src/: audio.cpp  draw.cpp  listener.cpp  main.cpp  mstime.cpp  netlights.cpp  netlights_test.cpp  packet_queue.cpp  pixel.cpp  sample_queue.cpp
test/: audio_test.cpp
